third_party/move/move-compiler/tests/move_check/typing/assign_tuple.exp
error[E04005]: expected a single type
   ┌─ tests/move_check/typing/assign_tuple.move:12:13
   │
 7 │     fun tuple(x: u64): (u64, S) {
   │                        -------- Expected a single type, but found expression list type: '(u64, 0x42::tuple_invalid::S)'
   ·
12 │         let x = tuple(x);
   │             ^ Invalid type for local

